Fix padding on mobile

--- a/us-summit-demo/src/index.scss
+++ b/us-summit-demo/src/index.scss
@@ -180,8 +180,8 @@ label {
     padding: 20px 24px 101px 24px;
 
     @media (max-width: 767px) {
-      padding: 20px 14px 141px 14px;
-      min-height: calc(100svh - 161px);
+      padding: 20px 14px 101px 14px;
+      min-height: calc(100svh - 141px);
     }
 
     .table-container {
